fix(faves): Add more padding and add nbsp to prevent wrapping

--- a/cl/users/static/css/custom_table_sorter.css
+++ b/cl/users/static/css/custom_table_sorter.css
@@ -12,7 +12,7 @@
 .tablesorter-bootstrap .tablesorter-header-inner {
   position: relative;
   /* Prevent overlap of icon and text */
-  padding-right: 14px;
+  padding-right: 20px;
 }
 
 /* bootstrap uses <i> for icons */
